--- a/html/RJB-Authorities.html
+++ b/html/RJB-Authorities.html
@@ -35,7 +35,7 @@
 		<ul class="topNav" id="myTopnav">
 			<div class="container">
 				<div class="item item11">
-					<li class="home"><a href="..\RJB.html"><i class="fas fa-home"></i></a></li>
+					<li class="home"><a href="..\index.html"><i class="fas fa-home"></i></a></li>
 					<li><a href="RJB-Facilities.html">Facilities</a></li>
 					<li><a href="RJB-Authorities.html">Authorities</a></li>
 					<li><a href="RJB-Gallery.html">Gallery</a></li>
