--- a/html/RJB-Authorities.html
+++ b/html/RJB-Authorities.html
@@ -36,13 +36,13 @@
 			<div class="container">
 				<div class="item item11">
 					<li class="home"><a href="..\index.html"><i class="fas fa-home"></i></a></li>
-					<li><a href="RJB-Facilities.html">Facilities</a></li>
+					<li><a href="RJB-facilities.html">Facilities</a></li>
 					<li><a href="RJB-Authorities.html">Authorities</a></li>
 					<li><a href="RJB-Gallery.html">Gallery</a></li>
 				</div>
 				<div class="item item12">
 					<li><a href="RJB-News.html">News</a></li>
-					<li><a href="RJB-Contact.html">Contact</a></li>
+					<li><a href="RJB-contact.html">Contact</a></li>
 				</div>
 				<li><a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a></li>
 			</div>
