--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
 			<div class="container">
 				<div class="item item11">
 					<li class="home"><a href="RJB.html"><i class="fas fa-home"></i></a></li>
-					<li><a href="html\RJB-Facilities.html">Facilities</a></li>
+					<li><a href="html\RJB-facilities.html">Facilities</a></li>
 					<li><a href="html\RJB-Authorities.html">Authorities</a></li>
 					<li><a href="html\RJB-Gallery.html">Gallery</a></li>
 				</div>
 				<div class="item item12">
 					<li><a href="html\RJB-News.html">News</a></li>
-					<li><a href="html\RJB-Contact.html">Contact</a></li>
+					<li><a href="html\RJB-contact.html">Contact</a></li>
 				</div>
 				<li><a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a></li>
 			</div>
