--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<ul class="topNav" id="myTopnav">
 			<div class="container">
 				<div class="item item11">
-					<li class="home"><a href="RJB.html"><i class="fas fa-home"></i></a></li>
+					<li class="home"><a href="index.html"><i class="fas fa-home"></i></a></li>
 					<li><a href="html\RJB-facilities.html">Facilities</a></li>
 					<li><a href="html\RJB-Authorities.html">Authorities</a></li>
 					<li><a href="html\RJB-Gallery.html">Gallery</a></li>
