--- a/html/RJB-Authorities.html
+++ b/html/RJB-Authorities.html
@@ -47,6 +47,7 @@
 				<li><a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a></li>
 			</div>
 		</ul>
+		<script type="text/javascript" src="..\js\RJB.js"></script>
 	</div>
 	<div class="container">
 		<div class="authorities">
