--- a/html/RJB-facilities.html
+++ b/html/RJB-facilities.html
@@ -48,7 +48,7 @@
 		<script type="text/javascript" src="..\js\RJB.js"></script>
 	</div>
 	<div class="container">
-		<div>
+		<div class="block">
 			<h3>MESS</h3>
 			<div class="thumbnail">
 				<img src="..\Img\MESS.jfif" class="suvidha">
@@ -59,8 +59,7 @@
 				</p>
 			</div>
 		</div>
-		<hr>
-		<div>
+		<div class="block">
 			<h3>SPORTS  FACILITIES</h3>
 			<div class="thumbnail">
 				<img src="..\Img\SPORTS.jfif" class="suvidha">
@@ -71,8 +70,7 @@
 				</p>
 			</div>
 		</div>
-		<hr>
-		<div>
+		<div class="block">
 			<h3>GYMNASIUM</h3>
 			<div class="thumbnail">
 				<img src="..\Img\GYM.jfif" class="suvidha">
@@ -83,8 +81,7 @@
 				</p>
 			</div>
 		</div>
-		<hr>
-		<div>
+		<div class="block">
 			<h3>INTERNET  FACILITIES</h3>
 			<div class="thumbnail">
 				<img src="..\Img\INTERNET.jfif" class="suvidha">
@@ -95,8 +92,7 @@
 				</p>
 			</div>
 		</div>
-		<hr>
-		<div>
+		<div class="block">
 			<h3>CANTEEN</h3>
 			<div class="thumbnail">
 				<img src="..\Img\canteen.jpg" class="suvidha">
@@ -112,8 +108,7 @@
 				</p>
 			</div>
 		</div>
-		<hr>
-		<div>
+		<div class="block">
 			<h3>LIBRARY</h3>
 			<div class="thumbnail">
 				<img src="..\Img\LIBRARY.jfif" class="suvidha">
@@ -127,8 +122,7 @@
 				</p>
 			</div>
 		</div>
-		<hr>
-		<div>
+		<div class="block">
 			<h3>GARDENS</h3>
 			<div class="thumbnail">
 				<img src="..\Img\IMG_7400.jfif" class="suvidha">
@@ -139,8 +133,7 @@
 				</p>
 			</div>
 		</div>
-		<hr>
-		<div>
+		<div class="block">
 			<h3>TV  ROOM</h3>
 			<div class="thumbnail">
 				<img src="..\Img\TVROOM.jfif" class="suvidha">
@@ -151,8 +144,7 @@
 				</p>
 			</div>
 		</div>
-		<hr>
-		<div>
+		<div class="block">
 			<h3>VISITOR  ROOM</h3>
 			<div class="thumbnail">
 				<img src="..\Img\visitors.jpg" class="suvidha">
@@ -163,8 +155,7 @@
 				</p>
 			</div>
 		</div>
-		<hr>
-		<div>
+		<div class="block">
 			<h3>UTILITIES</h3>
 			<div class="thumbnail">
 				<img src="..\Img\util.png" class="suvidha">
