mobile fix: final commit

--- a/html/RJB-Authorities.html
+++ b/html/RJB-Authorities.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- favicon -->
 	<link rel="icon" type="image/png" sizes="32x32" href="..\Img\favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="96x96" href="..\Img\favicon-96x96.png">
@@ -97,6 +98,7 @@
 				<h5>Mess Manager</h5>
 			</div>
 		</div>
+		<hr>
 		<div class="Secretaries">
 			<h3>Secretaries</h3>
 			<p>Secretaries are bhawan representatives of particular assigned field. They ensure that things in the bhawan are going fine. Whenever there is some problem related to their particular field they come into action. Not only these, they organise many intra bhawan events.</p>
