--- a/html/RJB-Gallery.html
+++ b/html/RJB-Gallery.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>RJB-Gallery</title>
 	<link rel="icon" type="image/png" sizes="32x32" href="..\Img\favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="96x96" href="..\Img\favicon-96x96.png">
@@ -55,12 +56,14 @@
 			<img src="..\Img\IMG-20200209-WA0022.jpg" class="A gc12">
 			<img src="..\Img\IMG-20200209-WA0021.jpg" class="B gc13">
 		</div>
+		<hr>
 		<h4>Intra Bhawan Indoor Sports Competition</h4>
 		<div class="grid-container2 grid-container">
 			<img src="..\Img\IMG-20200209-WA0025.jpg" class="C gc21">
 			<img src="..\Img\IMG-20200209-WA0019.jpg" class="C gc22">
 			<img src="..\Img\IMG-20200209-WA0041.jpg" class="C gc23">
 		</div>
+		<hr>
 		<h4>Launching of Cycles for Bhawan Inmates</h4>
 		<div class="grid-container3 grid-container">
 			<img src="..\Img\IMG-20200209-WA0032.jpg" class="A gc31">
@@ -68,17 +71,20 @@
 			<img src="..\Img\IMG-20200209-WA0034.jpg" class="A gc33">
 			<img src="..\Img\IMG-20200209-WA0033.jpg" class="A gc34">
 		</div>
+		<hr>
 		<h4>RJB Sangeet Samrat</h4>
 		<div class="grid-container4 grid-container">
 			<img src="..\Img\IMG-20200209-WA0038.jpg" class="B gc41">
 			<img src="..\Img\IMG-20200209-WA0039.jpg" class="B gc42">
 			<img src="..\Img\IMG-20200209-WA0040.jpg" class="B gc43">
 		</div>
+		<hr>
 		<h4>Bonfire during Makar Sankranthi</h4>
-		<div class="grid-container5 grid-container">
+		<div class="grid-container5 grid-container bon">
 			<img src="..\Img\IMG-20200209-WA0026.jpg" class="B gc51">
 			<img src="..\Img\IMG-20200209-WA0027.jpg" class="B gc52">
 		</div>
+		<hr>
 		<h4>National Youth Day</h4>
 		<div class="grid-container6 grid-container">
 			<img src="..\Img\IMG-20200209-WA0029.jpg" class="C gc61">
