--- a/html/RJB-contact.html
+++ b/html/RJB-contact.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- favicon -->
 	<link rel="icon" type="image/png" sizes="32x32" href="..\Img\favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="96x96" href="..\Img\favicon-96x96.png">
@@ -61,6 +62,7 @@
 				<h4>Vinod Tyagi</h4>
 				<h5>- Supervisor</h5>
 				<p><i class="fas fa-phone-alt"></i> 01332-284363 (O)</p>
+				<hr>
 			</div>
 			<div class="cont-2">
 				<h3>Secretaries</h3>
@@ -94,6 +96,7 @@
 					<h5>- Technical Secretary</h5>
 					<p><i class="fas fa-phone-alt"></i> 8696921196(P)</p>
 				</div>
+				<hr>
 			</div>
 		</div>
 	</div>
