--- a/html/RJB-facilities.html
+++ b/html/RJB-facilities.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Facilities-Rajendra Bhawan</title>
 	<link rel="icon" type="image/png" sizes="32x32" href="..\Img\favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="96x96" href="..\Img\favicon-96x96.png">
@@ -59,6 +60,7 @@
 				</p>
 			</div>
 		</div>
+		<hr>
 		<div class="block">
 			<h3>SPORTS  FACILITIES</h3>
 			<div class="thumbnail">
@@ -70,6 +72,7 @@
 				</p>
 			</div>
 		</div>
+		<hr>
 		<div class="block">
 			<h3>GYMNASIUM</h3>
 			<div class="thumbnail">
@@ -81,6 +84,7 @@
 				</p>
 			</div>
 		</div>
+		<hr>
 		<div class="block">
 			<h3>INTERNET  FACILITIES</h3>
 			<div class="thumbnail">
@@ -92,6 +96,7 @@
 				</p>
 			</div>
 		</div>
+		<hr>
 		<div class="block">
 			<h3>CANTEEN</h3>
 			<div class="thumbnail">
@@ -108,6 +113,7 @@
 				</p>
 			</div>
 		</div>
+		<hr>
 		<div class="block">
 			<h3>LIBRARY</h3>
 			<div class="thumbnail">
@@ -122,6 +128,7 @@
 				</p>
 			</div>
 		</div>
+		<hr>
 		<div class="block">
 			<h3>GARDENS</h3>
 			<div class="thumbnail">
@@ -133,6 +140,7 @@
 				</p>
 			</div>
 		</div>
+		<hr>
 		<div class="block">
 			<h3>TV  ROOM</h3>
 			<div class="thumbnail">
@@ -144,6 +152,7 @@
 				</p>
 			</div>
 		</div>
+		<hr>
 		<div class="block">
 			<h3>VISITOR  ROOM</h3>
 			<div class="thumbnail">
@@ -155,6 +164,7 @@
 				</p>
 			</div>
 		</div>
+		<hr>
 		<div class="block">
 			<h3>UTILITIES</h3>
 			<div class="thumbnail">
@@ -169,6 +179,7 @@
 			</div>
 		</div>
 	</div>
+	<hr>
 	<div class="color">
 		<div class="container">
 			<div class="footer">
