Author : Final Commit

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="author" content="Karthik Reddy Kanala">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- favicon -->
 	<link rel="icon" type="image/png" sizes="32x32" href="Img\favicon-32x32.png">
